public/main.css
* {
    font-family: Helvetica, sans-serif;
}
html, body {
    margin: 0;
    padding: 0;
}

:root {
    --theme-5: #88D498;
    --color-dark: #0B0C0C;
    --color-light: #DCE0D9;
    --vh: 1vh;
    --vh-100: calc(var(--vh) * 100);
}

#app {
    position: relative;
    display: block;
    box-sizing: border-box;
    padding-bottom: 60px;
}

#login_form {
    text-align: center;
    display: table;
    
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    height: 100vh;
    height: var(--vh-100);
    width: 100%;
}
#login_error {
    background-color: rgb(255, 212, 195);
    padding: 5px;
    border-radius: 8px;
    margin-bottom: 20px;
}
#login_wrap {
    background-color: rgb(236, 236, 236);
    display: table-cell;
    vertical-align: middle;
    padding: 0 20px;
}
#login_form h1 {
    margin-top: 0;
}
button, input {
    font-family: Helvetica, sans-serif;
}
input:-webkit-autofill,
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active  {
    -webkit-box-shadow: 0 0 0 30px rgb(240, 255, 249) inset !important;
}
#login_form input[type="text"], #login_form input[type="password"], #login_form input[type="submit"] {
    box-sizing: border-box;
    width: 100%;
    display: block;
    border: 1px solid #cccccc;
    padding: 10px 20px;
    margin: 10px auto;
    border-radius: 8px;
    outline: none;
    background-clip: white;
    font-size: 16px;
}
#login_form input[type="submit"] {
    background-color: #1CAA53;
    border: none;
    color: rgb(240, 255, 249);
}

#school_section {
    background-color: #2E2D2E;
    padding: 5px 20px;
    border-radius: 15px;
}
#school_section input[type="text"]{
    background-color: rgb(59, 59, 59);
    color: rgb(228, 228, 228);
    border: none;
}
#schools {
    width: 100%;
    margin: auto;
    height: 150px;
    overflow: auto;

    color: rgb(228, 228, 228);
}

.school {
    box-sizing: border-box;
    padding: 8px 15px;
    text-align: left;
}
.school i {
    color: #6d6d6d;
    font-style: normal;
}
.school input {
    display: none;
}
.school label {
    vertical-align: middle;
}
.school .checkmark {
    width: 15px;
    height: 15px;
    border-radius: 50%;
    background-color: #b3b3b3;
    display: inline-block;
    vertical-align: middle;
    transition: opacity .3s ease-out;
    color: green;
}
.school .checkmark i {
    color: inherit;
}
.school input:checked ~ .checkmark {
    background-color: #1CAA53;
}



#home {
    /*background-color: var(--color-dark);*/
    
    background: linear-gradient(to top left, #34e89e, #0f3443);
}

#avg_screen {
    padding: 30px 0;

    width: 100%;
    /*height: 150px;*/
    display: block;
    /*background-color: rgba(232, 238, 243, 0.418);*/
    background: transparent;
    text-align: center;

    color: whitesmoke;

}
#avg_detail_cont {
    vertical-align: middle;
}
#avg_detail_cont svg {
    vertical-align: middle;
}
#avg_detail_cont i {
    vertical-align: bottom;
}
.section.avg svg {
    stroke: #8ED081;
}
.section.rank svg {
    stroke: #F2DC5D;
}
.section.rank i {
    color: #F2DC5D;
}
.section.avg {
    text-align: right;
}
.section.rank {
    text-align: left;
}

#avg_detail_cont .section {
    
    vertical-align: middle;
    display: inline-block;
    width: 40%;

}
#avg_detail_cont .left {
    padding-top: 3px;
}
#avg_detail_cont .right, #avg_detail_cont .left {
    display: inline-block;
    vertical-align: middle;
}

.divider {
    width: 0;
    height: 30px;
    display: inline-block;
    border: 0.5px solid #cfcfcf;
    content: '';
    vertical-align: middle;
    margin: 0 10px;
}

#avg_detail_cont .big, #avg_detail_cont .small {
    display: block;
    width: max-content;
    margin: 0;
}
#avg_detail_cont .big {
    font-size: 18px;
    font-weight: bold;
    
}
#avg_detail_cont .small {
    font-size: 13px;
    color: #cccccc;
}

circle {
    transition: stroke-dashoffset 0.35s, stroke 0.35s;
    transform: rotate(-90deg);
    transform-origin: 50% 50%;
    /*stroke: #00cc66;*/

}
#circle_container {
    
    
    width: 120px;
    height: 120px;
    position: relative;
    display: inline-block;
}
#circle_container #total_avg, #circle_container #avg_circle {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    display: inline-block;
}
#total_avg_text {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    text-align: center;
    height: max-content;
    font-size: 30px;
}


#recent h1 .left, #recent h1 .right {
    display: inline-block;
    vertical-align: middle;
    width: 50%;
}
#recent h1 .right {
    text-align: right;
}
#recent h1 .right svg {
    vertical-align: middle;
}
#recent h1 {
    white-space: nowrap;
    text-align: left;
    font-weight: normal;
    
    color: var(--color-dark);
    background-color: rgb(170, 255, 204);
    background: transparent;
    box-sizing: border-box;
    /*color: var(--color-light);*/
    
    /*border-top-left-radius: 0;
    border-top-right-radius: 0;*/
    padding: 10px 10px;
    margin-top: 0px;
    margin: 10px 15px;
    font-size: 25px;
    /*box-shadow: 0 3px 15px rgba(0, 0, 0, 0.15);*/
}
#grades {
    padding: 0 10px;
    box-sizing: border-box;
}
.grade {
    list-style: none;
    width: 100%;
    
    font-size: 16px;

    margin: 8px 0;
    padding: 10px 12px;
    padding-left: 5px;
    box-sizing: border-box;
    border: 1px solid #e6e6e6;
    border-radius: 8px;

    white-space: nowrap;
    overflow-x: auto;

    position: relative;

    transition: background-color 0.3s ease-out;
}
.grade .left, .grade .right{
    display: inline-block;
    vertical-align: middle;
    white-space: initial;
}
.grade .right {
    width: 80%;
    width: calc(calc(100% - 43px) - 80px);
}
.grade .left {
    
    padding: 5px 10px;
    font-size: 28px;
    font-weight: bold;

}
[data-grade="5"] {
    color: #00cc66;
}
[data-grade="4"] {
    color: #009999;
}
[data-grade="3"] {
    color: #ffcc00;
}
[data-grade="2"] {
    color: #ff6600;
}
[data-grade="1"] {
    color: #b32400;
}


.grade_header {
    font-weight: bold;
}
.grade .date {
    position: absolute;
    right: 10px;
    width: 80px;
    top: 0;
    bottom: 0;
    height: min-content;
    vertical-align: middle;
    margin: auto;
    text-align: right;
    color: #616161;
}
.grade .date b {
    font-weight: normal;
}
.grade .date i {
    font-style: normal;
    font-size: 15px;
}

.grade .date .relative {
    position: relative;
    display: inline-block;
    width: 100%;
}

.grade .right .bottom {
    color: #616161;
}


#subjects {
    border-radius: 15px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    background-color: white;
    padding: 10px 10px;
    margin: 0;
    box-sizing: border-box;
}
.subject {
    list-style: none;
    width: 100%;
    
    font-size: 16px;

    margin: 8px 0;
    padding: 8px 12px;
    box-sizing: border-box;
    border: 1px solid #e6e6e6;
    border-radius: 8px;

    transition: background-color 0.3s ease-out;
}
.subject:hover, .grade:hover {
    background-color: rgba(0, 0, 0, 0.05);
}
.subject_header {
    white-space: nowrap;
}
.subject_header .left, .subject_header .right {
    width: 50%;
    display: inline-block;
    vertical-align: middle;
    margin: 0;
    padding: 0;
}
.subject_header .right {
    text-align: right;
}
.subject_header .right * {
    vertical-align: middle;
}
.subject_header .right svg {
    stroke: rgb(218, 134, 95);    
}

.subject_header .right svg.up {
    stroke: #1CAA53;    
}

.subject .tinygrade:first-child {
    margin-left: 0;
}
.tinygrade {
    margin-left: 6px;
    display: inline-block;
    color: #4d4d4d;
}

.subject_avg {
    
}


#menu {
    display: table;
    text-align: center;


    background-color: white;
    border-top: 1px solid #e6e6e6;
    position: fixed;
    
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    /*box-shadow: 0 0 5px rgba(0,0,0,.15);*/
    

    box-sizing: border-box;
    padding: 0 50px;
}
#menu button.active svg {
    stroke: #1CAA53;
}
#menu button.active b {
    color: #1CAA53;
}
#menu button.active i {
    /*color: #66ceab;*/
    color: #1CAA53;

}
#menu button svg {
    stroke: #2A2D34;
}
#menu button b {
    color: #2A2D34;
    display: block;
    font-weight: bold;
    font-size: 12px;
}
#menu button i {
    font-size: 28px;
    /*color: #c0c0c0;*/
    /*color: #1D1B27;*/
    /*color: #565663;*/
    color: #2A2D34;
}
#menu button {
    display:table-cell;
    text-align:center;
    /*display: inline-block;*/
    width: 33%;
    padding: 8px 15px;
    
    box-sizing: border-box;
    vertical-align: middle;
    background: transparent;
    border: none;
    outline: none;
}

.feather {
    width: 24px;
    height: 24px;
    stroke: #000;
    stroke-width: 2;
    stroke-linecap: round;
    stroke-linejoin: round;
    fill: none;
}


#loading_screen {
    width: 100vw;
    height: 100vh;
    height: var(--vh-100);
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: 0;
    background-color: #7fffd4;
}
#loading_screen .lds-ring {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
}

/*loader*/
.lds-ring {
    display: inline-block;
    position: relative;
    width: 64px;
    height: 64px;
  }
  .lds-ring div {
    box-sizing: border-box;
    display: block;
    position: absolute;
    width: 51px;
    height: 51px;
    margin: 6px;
    border: 6px solid #fff;
    border-radius: 50%;
    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
    border-color: #fff transparent transparent transparent;
  }
  .lds-ring div:nth-child(1) {
    animation-delay: -0.45s;
  }
  .lds-ring div:nth-child(2) {
    animation-delay: -0.3s;
  }
  .lds-ring div:nth-child(3) {
    animation-delay: -0.15s;
  }
  @keyframes lds-ring {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
  


#info_page {
    text-align: center;
}
#info_page ul {
    padding: 0;
    text-align: left;
}
#info_page li {
    list-style: none;
    border-top: 1px solid #dddddd;
    margin: 0 30px;
    padding: 10px 0;
}
#info_page li:first-child {
    border: none;
}
#info_page li h2 {
    margin: 0 0;
    margin-bottom: 5px;
    font-size: 22px;
}
#info_page h1 {
    margin: 0;
}
#profile_circle_container {
    margin: 60px 0;
    
}
#profile_circle svg {
    width: 30px;
    height: 30px;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    display: inline-block;
    stroke: #464646;
}
#profile_circle {
    display: inline-block;
    width: 60px;
    height: 60px;
    border-radius: 50%;
    background-color: #e6e6e6;
    position: relative;
}
#logout {
    display: inline-block;
    width: 80%;
    box-sizing: border-box;
    padding: 8px;
    border-radius: 8px;
    border: none;
    font-size: 16px;
    font-family: inherit;
    background-color: rgb(231, 231, 231);
    margin-top: 40px;
    margin-bottom: 30px;
    outline: none;
}

